fix: define API_BASE_URL to resolve frontend error

--- a/index.html
+++ b/index.html
@@ -478,6 +478,7 @@
     </div>
 
     <script>
+        const API_BASE_URL = ""; // Use relative paths for same-origin API calls
         let currentTimeline = [];
         let audioPlayer = document.getElementById('audioPlayer');
 
