--- a/index.html
+++ b/index.html
@@ -1546,63 +1546,56 @@
             const container = document.getElementById('quranContainer');
             container.innerHTML = ''; // Clear
 
-            let ayahsToRender = ayahs;
+            // Handle Surah 9 (At-Tawbah) - No Basmala
+            if (surahNumber == 9) {
+                const wrapper = document.createElement('div');
+                wrapper.className = 'leading-loose text-justify';
 
-            // Handle Basmala Logic
-            if (surahNumber == 1) {
-                // For Surah 1, the first ayah IS the Basmala. 
-                // We extract it and render it centered.
-                if (ayahs.length > 0) {
-                    const basmalaText = ayahs[0].text;
-                    const basmalaDiv = document.createElement('div');
-                    basmalaDiv.className = 'basmala';
-                    basmalaDiv.textContent = basmalaText;
-                    container.appendChild(basmalaDiv);
+                ayahs.forEach(item => {
+                    const span = document.createElement('span');
+                    span.className = 'ayah-span hover:bg-emerald-50 cursor-default';
+                    span.textContent = item.text;
 
-                    // Remove first ayah from standard flow
-                    ayahsToRender = ayahs.slice(1);
-                }
-            } else if (surahNumber != 9) {
-                // For all other Surahs (except 9), we add the standard Basmala header
+                    const marker = document.createElement('span');
+                    marker.className = 'ayah-marker';
+                    marker.innerHTML = `۝ <span class="ayah-number">${item.numberInSurah}</span>`;
+
+                    span.appendChild(marker);
+                    wrapper.appendChild(span);
+                    wrapper.appendChild(document.createTextNode(' '));
+                });
+                container.appendChild(wrapper);
+                return;
+            }
+
+            // For all other Surahs, the first item in the list starts with Basmala.
+            // We move this entire first item to the header.
+            if (ayahs.length > 0) {
+                const basmalaText = ayahs[0].text;
                 const basmalaDiv = document.createElement('div');
                 basmalaDiv.className = 'basmala';
-                basmalaDiv.textContent = "بِسْمِ ٱللَّهِ ٱلرَّحْمَـٰنِ ٱلرَّحِيمِ";
+                basmalaDiv.textContent = basmalaText; // The entire text of the first item
                 container.appendChild(basmalaDiv);
             }
 
-            // Create wrapper
+            // Render remaining Ayahs
             const wrapper = document.createElement('div');
-            // Using standard quran-text class but ensuring line-height is good
             wrapper.className = 'leading-loose text-justify';
 
+            // Skip the first item since it's in the header
+            const ayahsToRender = ayahs.slice(1);
+
             ayahsToRender.forEach(item => {
-                let text = item.text;
-
-                // Clean up Basmala from the first Ayah of non-Fatiha surahs
-                // The API often includes it at the start of the first verse string
-                if (item.numberInSurah === 1 && surahNumber != 1) {
-                    const basmala = "بِسْمِ ٱللَّهِ ٱلرَّحْمَـٰنِ ٱلرَّحِيمِ";
-                    // Check if it starts with Basmala (allowing for some spacing/variation)
-                    if (text.startsWith(basmala)) {
-                        text = text.replace(basmala, "").trim();
-                    } else if (text.startsWith("بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ")) { // Simple encoding
-                        text = text.replace("بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ", "").trim();
-                    }
-                }
-
                 const span = document.createElement('span');
-                span.className = 'ayah-span hover:bg-emerald-50 cursor-default'; // Simplify interaction
-                span.textContent = text;
+                span.className = 'ayah-span hover:bg-emerald-50 cursor-default';
+                span.textContent = item.text;
 
-                // Add ayah marker
                 const marker = document.createElement('span');
                 marker.className = 'ayah-marker';
                 marker.innerHTML = `۝ <span class="ayah-number">${item.numberInSurah}</span>`;
 
                 span.appendChild(marker);
                 wrapper.appendChild(span);
-
-                // Add generic space
                 wrapper.appendChild(document.createTextNode(' '));
             });
 
